# ege

./: .gitignore  CMakeLists.txt  LICENSE  README.md
demo/: 0-hello-world.cxx  1-triangle.cxx  2-wired-ocean.cxx  3-mandelbrot.cxx
doc/: doxygen.conf
include/ege/: engine.hxx  exception.hxx  keyboard.hxx  log.hxx  scenario.hxx  version.hxx
include/ege/engine/: configuration.hxx  engine.hxx  flow.hxx  resources.hxx
include/ege/flow/: enqueue-executor.hxx  executable.hxx  execution-queue.hxx  executor-thread.hxx  executor.hxx  fps-analyzer.hxx  fragment.hxx  fragments-graph.hxx  frame.hxx  parallel-nucleus.hxx  priority.hxx  scene.hxx  signal.hxx  thread.hxx  updateable.hxx
include/ege/game/: scene.hxx  updateable.hxx
include/ege/graphic/: brush-stroke.hxx  canvas.hxx  clearer.hxx  image.hxx  layer.hxx  painter.hxx  projection.hxx  vertices.hxx
include/ege/graphic/buffer/: buffer.hxx  mapper.hxx  stream-mapper.hxx
include/ege/graphic/font/: face.hxx  glyph.hxx
include/ege/graphic/geometry/: matrix.hxx  projection.hxx  transform.hxx
include/ege/graphic/gpu/: buffer.hxx  context.hxx  draw.hxx  frame-buffer.hxx  object.hxx  program.hxx  sampler.hxx  shader.hxx  texture-2D.hxx  texture.hxx  vertex-array.hxx
include/ege/graphic/program/: extension.hxx  mvp-texture-program.hxx  program.hxx
include/ege/graphic/render/: draw.hxx  targetable.hxx  texture-regions-stream-drawer.hxx
include/ege/graphic/step/: clear.hxx  step.hxx
include/ege/graphic/texture/: format.hxx  pixels-buffer.hxx  rectangular-region.hxx  region.hxx  sampler.hxx  texture.hxx
include/ege/hardware/: keyboard.hxx  monitor.hxx
include/ege/keyboard/: key.hxx  keyboard.hxx  listener.hxx  modifier.hxx
include/ege/math/: matrix.hxx  matrix.txx  polygon-mesh.hxx  polygon-mesh.txx  triangle.hxx  triangle.txx  vector.hxx  vector.txx
include/ege/mouse/: cursor-mode.hxx  mouse.hxx  position-listener.hxx
include/ege/opengl/: all.hxx  blending.hxx  buffer.hxx  clearing.hxx  context.hxx  drawing.hxx  error.hxx  framebuffer.hxx  hint.hxx  object.hxx  program.hxx  rasterization.hxx  renderbuffer.hxx  sampler.hxx  shader.hxx  vertex-array.hxx  viewport.hxx
include/ege/opengl/util/: matrix.hxx  matrix.txx
include/ege/resource/: factory.hxx  image.hxx  loader.hxx  loader.txx  manager.hxx  manager.txx  resource.hxx  root.hxx
include/ege/scenario/: scenario.hxx
include/ege/time/: time-stamp.hxx  time-stamp.txx
include/ege/util/fps/: analyzer.hxx  moderator.hxx
include/ege/util/io/: image.hxx
include/ege/util/load/: image.hxx
include/ege/util/log/: level.hxx  logger.hxx
include/private/ege/engine/: control-thread.hxx  flow.hxx  ini-fini.hxx  resources.hxx
include/private/ege/flow/: buffer-swap-fragment.hxx  ege-start-scene.hxx  event-update-fragment.hxx  origin-fragment.hxx  thread.hxx
include/private/ege/game/: ege-start-scene.hxx
include/private/ege/glfw/: keyboard.hxx  monitor.hxx  mouse.hxx  opengl-context.hxx  opengl-default-fbo.hxx  window.hxx
include/private/ege/opengl/: error.hxx
private/include/ege_private/opengl/: program.hxx  shader.hxx
private/source/graphic/geometry/: projection.cxx
private/source/graphic/opengl/: program.cxx  shader.cxx
private/source/opengl/: program.cxx  shader.cxx
source/: engine.cxx  exception.cxx  log.cxx  scenario.cxx  version.cxx
source/engine/: configuration.cxx  control-thread.cxx  engine.cxx  flow.cxx  ini-fini.cxx  resources.cxx
source/flow/: buffer-swap-buffer.cxx  ege-start-scene.cxx  enqueue-executor.cxx  event-update-fragment.cxx  executable.cxx  execution-queue.cxx  executor-thread.cxx  executor.cxx  fps-analyzer.cxx  fragment.cxx  frame.cxx  origin-fragment.cxx  parallel-nucleus.cxx  scene.cxx  signal.cxx  thread.cxx  updateable.cxx
source/game/: ege-start-scene.cxx  scene.cxx  updateable.cxx
source/glfw/: keyboard.cxx  monitor.cxx  mouse.cxx  opengl-context.cxx  opengl-default-fbo.cxx  window.cxx
source/graphic/: canvas.cxx  clearer.cxx  image.cxx  painter.cxx  projection.cxx  vertices.cxx
source/graphic/buffer/: buffer.cxx
source/graphic/font/: face.cxx  glyph.cxx  library.cxx
source/graphic/geometry/: projection.cxx  transform.cxx
source/graphic/geometry/vertex/: array.cxx  buffer.cxx
source/graphic/gpu/: buffer.cxx  context.cxx  draw.cxx  frame-buffer.cxx  object.cxx  program.cxx  sampler.cxx  shader.cxx  texture-2D.cxx  texture.cxx  vertex-array.cxx
source/graphic/program/: extension.cxx  mvp-texture-program.cxx  program.cxx
source/graphic/render/: draw.cxx  targetable.cxx  texture-regions-stream-drawer.cxx
source/graphic/step/: clear.cxx
source/graphic/texture/: pixels-buffer.cxx  rectangular-region.cxx  region.cxx  sampler.cxx  texture.cxx
source/hardware/: keyboard.cxx  monitor.cxx
source/opengl/: blending.cxx  buffer.cxx  clearing.cxx  drawing.cxx  error.cxx  framebuffer.cxx  hint.cxx  program.cxx  rasterization.cxx  renderbuffer.cxx  shader.cxx  vertex-array.cxx  viewport.cxx
source/resource/: image.cxx  manager.cxx  resource.cxx  root.cxx
source/scenario/: scenario.cxx
source/util/fps/: analyzer.cxx  moderator.cxx
source/util/io/: image.cxx
source/util/log/: logger.cxx
(+43 files in other folders)
